# petra

./: .gitignore  pyproject.toml  streamlit_app.py
app/: llm.py  pdf_ingest.py  process.py  prompt.py  prompt_openspecimen.py
