[project]
name = "openspecimen-ai-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratik Ghodke",email = "pratik.ghodke@sarvaha.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "agno (>=1.1.13,<2.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pymilvus (>=2.5.5,<3.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "openai (>=1.67.0,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "google-genai (>=1.9.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
